# gitlab-changelog

./: .gitignore  CHANGELOG.md  README.md  Taskfile.yml  pyproject.toml
.github/workflows/: ci.yml
.task/checksum/: venv
src/gitlab_changelog/: formatter.py  gitlab_client.py  main.py
tests/: test_formatter.py  test_gitlab_client.py  test_main.py
