[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gitlab-changelog"
version = "0.1.0"
authors = [
  { name="Junie", email="junie@jetbrains.com" },
]
description = "Generate a changelog of commits between an environment's current deployment and a git reference on GitLab."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
]

[tool.semantic_release]
version_variables = [
    "src/gitlab_changelog/__init__.py:__version__",
]
version_toml = [
    "pyproject.toml:project.version",
]
# Use the same configuration as the manual branch setup if needed, 
# but v9 usually uses [tool.semantic_release.branches.main] style or matches current branch.
build_command = "pip install build && python -m build"

[tool.semantic_release.branches.master]
match = "master"

[tool.semantic_release.commit_parser_options]
major_tags = ["break", "major"]
minor_tags = ["feat", "minor"]
patch_tags = ["fix", "perf", "patch"]
allowed_tags = ["feat", "fix", "perf", "build", "chore", "ci", "docs", "style", "refactor", "test", "break", "major", "minor", "patch"]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-mock",
]
dev = [
    "black",
    "flake8",
    "ruff",
]

[project.scripts]
gitlab-changelog = "gitlab_changelog.main:run"

[tool.setuptools.packages.find]
where = ["src"]
